--- a/FirstWebApp/Views/Club/Index.cshtml
+++ b/FirstWebApp/Views/Club/Index.cshtml
@@ -5,6 +5,7 @@
 *@
 @{
 }
+<div><a asp-controller="Club" asp-action="Create" type="submit" class="btn btn-primary">Create New Club</a></div>
 
 <div class="album py-5 bg-light">
     <div class="container">
@@ -22,7 +23,7 @@
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                     <a asp-controller="Club" asp-action="Detail" asp-route-id="@item.Id" type="button" class="btn btn-sm btn-outline-secondary">View</a>
-                                    <a asp-controller="Club" asp-action="Chert" asp-route-title="@item.Title" type="button" class="btn btn-sm btn-outline-secondary">Edit</a>
+                                    <a asp-controller="Club" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Edit</a>
                                 </div>
                                 <small class="text-muted">@item.ClubCategory</small>
                             </div>
