--- a/FirstWebApp/Views/Race/Index.cshtml
+++ b/FirstWebApp/Views/Race/Index.cshtml
@@ -24,6 +24,7 @@
                                 <div class="btn-group">
                                     <a asp-controller="Race" asp-action="Detail" asp-route-id="@item.Id" type="button" class="btn btn-sm btn-outline-secondary">View</a>
                                     <a asp-controller="Race" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Edit</a>
+                                    <a asp-controller="Race" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Delete</a>
                                 </div>
                                 <small class="text-muted">@item.RaceCategory</small>
                             </div>
