--- a/FirstWebApp/Views/Club/Create.cshtml
+++ b/FirstWebApp/Views/Club/Create.cshtml
@@ -9,6 +9,7 @@
 
 
 <form method="post" asp-action="Create" enctype="multipart/form-data">
+    <input type="hidden" id="AppUserId" name="AppUserId" asp-for="AppUserId" />
     <div class="form-group">
         <label asp-for="Title">Title</label>
         <input asp-for="Title" type="email" class="form-control" placeholder="Title"> 
