--- a/FirstWebApp/Views/Race/Index.cshtml
+++ b/FirstWebApp/Views/Race/Index.cshtml
@@ -5,7 +5,6 @@
 *@
 @{
 }
-<div><a asp-controller="Race" asp-action="Create" type="submit" class="btn btn-primary">Create New Race</a></div>
 
 <div class="album py-5 bg-light">
     <div class="container">
@@ -23,8 +22,12 @@
                             <div class="d-flex justify-content-between align-items-center">
                                 <div class="btn-group">
                                     <a asp-controller="Race" asp-action="Detail" asp-route-id="@item.Id" type="button" class="btn btn-sm btn-outline-secondary">View</a>
-                                    <a asp-controller="Race" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Edit</a>
-                                    <a asp-controller="Race" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Delete</a>
+                                    @if(User.Identity.IsAuthenticated && User.IsInRole("admin"))
+                                    {
+                                        <a asp-controller="Race" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Edit</a>
+                                        <a asp-controller="Race" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Delete</a>
+                                    }
+                                    
                                 </div>
                                 <small class="text-muted">@item.RaceCategory</small>
                             </div>
