--- a/FirstWebApp/Views/User/Index.cshtml
+++ b/FirstWebApp/Views/User/Index.cshtml
@@ -17,15 +17,15 @@
 
                     <div class="card mb-4 box-shadow">
 
-                        @*<img class="card-img-top" src="@item.Image" width="100%" height="225" alt="Card image cap">*@
+                        <img class="card-img-top" src="@item.ProfileImageUrl" width="100%" height="225" alt="Card image cap">
 
                         <div class="card-body">
 
                             <p class="card-text">@item.UserName</p>
 
-                            <p class="card-text">@item.Mileage</p>
+                            <p class="card-text">Mileage: @item.Mileage</p>
 
-                            <p class="card-text">@item.Pace</p>
+                            <p class="card-text">Pace: @item.Pace</p>
 
                             <div class="d-flex justify-content-between align-items-center">
 
@@ -38,9 +38,9 @@
 
                                     {
 
-                                        <a asp-controller="Club" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Edit</a>
+                                        <a asp-controller="Dashboard" asp-action="EditUserProfile" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Edit</a>
 
-                                        <a asp-controller="Club" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Delete</a>
+                                        <a asp-controller="Dashboard" asp-action="DeleteUserProfile" asp-route-id="@item.Id" class="btn btn-sm btn-outline-secondary">Delete</a>
 
                                     }
 
